crates/config/tests/snapshots/invalid_escape.snap
---
source: crates/config/tests/snapshots.rs
---
# invalid_escape

## Input

```mical
a "bad\x"
b value

```

## Error

```
invalid escape sequence '\x' at 6..8
```

## Json

```json
{
  "b": "value"
}
```

vim:ft=markdown
