crates/config/tests/snapshots/invalid_escape_single_quote.snap
---
source: crates/config/tests/snapshots.rs
---
# invalid-escape-single-quote

## Input

```mical
a 'bad\z'

```

## Config Error

```
invalid escape sequence '\z' at 6..8
```

## JSON

```json
{
  "a": "badz"
}
```

vim:ft=markdown
