crates/config/tests/snapshots/key_multi_space_separator.snap
---
source: crates/config/tests/snapshots.rs
---
# key-multi-space-separator

## Input

```mical
a  value
b   42
c    true

```

## JSON

```json
{
  "a": "value",
  "b": 42,
  "c": true
}
```

vim:ft=markdown
