crates/config/tests/snapshots/key_punctuation.snap
---
source: crates/config/tests/snapshots.rs
---
# key-punctuation

## Input

```mical
a#b     value
can't   value
.dot    value
-       value

```

## JSON

```json
{
  "a#b": "value",
  "can't": "value",
  ".dot": "value",
  "-": "value"
}
```

vim:ft=markdown
