crates/config/tests/snapshots/key_quoted_basic.snap
---
source: crates/config/tests/snapshots.rs
---
# key-quoted-basic

## Input

```mical
"double"          value
'single'          value
""                empty

```

## JSON

```json
{
  "double": "value",
  "single": "value",
  "": "empty"
}
```

vim:ft=markdown
