crates/config/tests/snapshots/key_quoted_escapes.snap
---
source: crates/config/tests/snapshots.rs
---
# key-quoted-escapes

## Input

```mical
"a\"b" v1
'c\'d' v2
"e\\f" v3

```

## JSON

```json
{
  "a\"b": "v1",
  "c'd": "v2",
  "e\\f": "v3"
}
```

vim:ft=markdown
