crates/config/tests/snapshots/key_quoted_spaces_hash.snap
---
source: crates/config/tests/snapshots.rs
---
# key-quoted-spaces-hash

## Input

```mical
"key with spaces" v1
'a # b'           v2

```

## JSON

```json
{
  "key with spaces": "v1",
  "a # b": "v2"
}
```

vim:ft=markdown
