crates/config/tests/snapshots/key_value_boolean.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-boolean

## Input

```mical
a true
b false

```

## JSON

```json
{
  "a": true,
  "b": false
}
```

vim:ft=markdown
