crates/config/tests/snapshots/key_value_boolean_at_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-boolean-at-eof

## Input

```mical
b false
```

## JSON

```json
{
  "b": false
}
```

vim:ft=markdown
