crates/config/tests/snapshots/key_value_boolean_like.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-boolean-like

## Input

```mical
a trueish
b falsehood
c true value
d false value

```

## JSON

```json
{
  "a": "trueish",
  "b": "falsehood",
  "c": "true value",
  "d": "false value"
}
```

vim:ft=markdown
